# live-sfm

./: .gitignore  CMakeLists.txt  README.md  dev_notes.txt  main.cpp
calibration/: calibration.xml
images/: vid2.webm
include/: circles.h  detectors.h  main.h  sfm.h
src/: circles.cpp  classy.cpp  detectors.cpp  main.cpp  sfm.cpp
